2003-03-04  Jeff Freedman  <jeff@amy.nerble.net>

	* imagewin/scale.cc,etc.: Added Andrea Mazzoleni "Scale2X" scaler.

2003-02-28  Jeff Freedman  <jeff@amy.nerble.net>

	* gamerend.cc (using): Draw modal gumps after text.

	* combat.cc (Combat): Only play victory music when there are no
	more enemies around.  Also, play one of two pieces.

2003-02-27  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* conversation.cc: don't use BG multiracial hack if not in BG

2003-02-24  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* configure.ac: renamed configure.in to configure.ac; updated for
	autoconf 2.53+; removed acconfig.h
	* audio/Makefile.am: missing header from sources

2003-02-20  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* version.cc: output HAVE_OPENGL setting
	* imagewin.h: disable OpenGL in the video options if not HAVE_OPENGL

2003-02-20  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* forked_player.cc: don't go into infinite loop when player fails
	* shapeid.*: minor cleanup
	* objs/egg.cc: prevent egg from retriggering immediately
	* gamerend.cc, Gump_manager.*: draw modal gumps even when in dont_move

2003-02-20  Jeff Freedman  <jeff@amy.nerble.net>

	* combat.cc (Combat): Wisps can teleport (partly done).
	* actors.cc:  Wisps (and others) always get at least 1 attack
	point for their builtin weapon.

2003-02-18  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Exploding weapons implemented.

2003-02-17  Jeff Freedman  <jeff@amy.nerble.net>

	* objs/chunks.{cc,h},etc:  find_door() speeds up pathfinding.

2003-02-16  Jeff Freedman  <jeff@amy.nerble.net>

	* drag.cc (Dragging_info): Don't drop above where we can see.

2003-02-15  Jeff Freedman  <jeff@amy.nerble.net>

	* drag.cc,objs/objs.cc,objs/chunks.cc:  A removed object now has
	its chunk coords set to (255, 255).

	* objs/chunks.cc (Chunk_cache): Rewrote 'blocking' code.  Now a
	0-3 element count is maintained.
